k8s/app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-depl
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: whats
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: backend
      protocol: TCP
      port: 3000
      targetPort: 3000
